# thor_copter

./: CMakeLists.txt  README.md  package.xml
launch/: barebones.launch  barebones_ins.launch  field_ins.launch  field_ins_bag.launch  mocap_ins.launch  mocap_ins_bag.launch  multirotor_sim.launch  vi_ekf_bag_runner.launch
params/: controller_params.yaml  firmware_params.yaml  vi_ekf_camera_params-sim.yaml  vi_ekf_camera_params.yaml  vi_ekf_params.yaml
